@@ -1,3 +1,4 @@
+from typing import List
 import discord
 
 class My_View(discord.ui.View):
@@ -18,3 +19,65 @@ class My_View(discord.ui.View):
         for item in self.children:
             item.disabled = True
         await self.message.edit(view=self)
+
+class Button_View(My_View):
+    def __init__(self, user: discord.User, embeds: List[discord.Embed]):
+        super().__init__(user)
+        self.current_page = 1
+        self.max_page=len(embeds)
+        self.embeds = embeds
+        self.embed = embeds[0]
+        self.mid_btn.label = f'1/{self.max_page}'
+
+    async def btn_update(self):
+        if self.current_page == 1:
+            self.left2_btn.disabled = True
+            self.left_btn.disabled = True
+        else:
+            self.left2_btn.disabled = False
+            self.left_btn.disabled = False
+
+        if self.current_page == self.max_page:
+            self.right_btn.disabled = True
+            self.right2_btn.disabled = True
+        else:
+            self.right_btn.disabled = False
+            self.right2_btn.disabled = False
+
+        self.mid_btn.label = f"{self.current_page}/{self.max_page}"
+
+    @discord.ui.button(label="<<", disabled=True)
+    async def left2_btn(self, interaction: discord.Interaction, button: discord.ui.Button):
+        self.current_page += -10
+        if self.current_page < 1:
+            self.current_page = 1
+        self.embed =self.embeds[self.current_page-1]
+        await self.btn_update()
+        await interaction.response.edit_message(embed=self.embed, view=self)
+
+    @discord.ui.button(label="<", disabled=True)
+    async def left_btn(self, interaction: discord.Interaction, button: discord.ui.Button):
+        self.current_page += -1
+        self.embed =self.embeds[self.current_page-1]
+        await self.btn_update()
+        await interaction.response.edit_message(embed=self.embed, view=self)
+
+    @discord.ui.button(label="1/1", disabled=True)
+    async def mid_btn(self, interaction: discord.Interaction, button: discord.ui.Button):
+        pass
+
+    @discord.ui.button(label=">", disabled=True)
+    async def right_btn(self, interaction: discord.Interaction, button: discord.ui.Button):
+        self.current_page += 1
+        self.embed =self.embeds[self.current_page-1]
+        await self.btn_update()
+        await interaction.response.edit_message(embed=self.embed, view=self)
+
+    @discord.ui.button(label=">>", disabled=True)
+    async def right2_btn(self, interaction: discord.Interaction, button: discord.ui.Button):
+        self.current_page += 10
+        if self.current_page > self.max_page:
+            self.current_page = self.max_page
+        self.embed =self.embeds[self.current_page-1]
+        await self.btn_update()
+        await interaction.response.edit_message(embed=self.embed, view=self)
