@@ -1,3 +1,4 @@
+2023/01/30 Added additional skill command /skilldetails that can view data more closer to the original
 2023/01/28 Added extra indication for mimi resonace targets for high/lowest defense
 2023/01/26 Got a VPS to run the bot so less downtime and faster responses!
 2023/01/24 Added tower, quest command to search for enemy data
